wi(ARCH-695): Move Daikon to Java 17/SB 3 (#952)